FIXED: modal z-index for appointment window again

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -27,5 +27,5 @@
 }
 
 .modal_z_index {
-  z-index: 99999;
+  z-index: 99900;
 }
